[package]
name = "zcash_examples"
version = "0.8.0"
edition = "2021"

[dependencies]
zcash_primitives = { version = "0.8", path = "../zcash_primitives", default-features = false }
zcash_proofs = { version = "0.8", path = "../zcash_proofs", default-features = false }

bellman = { version = "0.13.1", default-features = false, features = ["groth16"] }
bls12_381 = "0.7"
group = "0.12"
jubjub = "0.9"
lazy_static = "1"
minreq = { version = "2", features = ["https"], optional = true }
rand_core = "0.6"
tracing = "0.1"
blake2b_simd = "1"
directories = { version = "4", optional = true }
redjubjub = "0.5"
wagyu-zcash-parameters = { version = "0.2", optional = true }
rand_xorshift = "0.3"
